--- a/generador-imagenes/index.html
+++ b/generador-imagenes/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Generador de Imágenes IA</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <a href="../index.html">Volver</a>
+  <svg id="background"></svg>
   <div class="container">
     <h1>🧠 Generador de Imágenes con IA</h1>
     <form id="promptForm">
