--- a/chat-openai/index.html
+++ b/chat-openai/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <a href="../index.html">Volver</a>
+  <svg id="background"></svg>
   <div class="chat-container">
     <h2>🤖 Chat GPT-4</h2>
     <div id="chatBox" class="chat-box"></div>
