chat + dall-e minor css ammends

--- a/chat-openai/index.html
+++ b/chat-openai/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chat con GPT-4</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  <a href="../index.html">Volver</a>
+  <a href="../index.html" class="back-button">Volver</a>
   <svg id="background"></svg>
   <div class="chat-container">
     <h2>🤖 Chat GPT-4</h2>
