--- a/chat-openai/index.html
+++ b/chat-openai/index.html
@@ -19,5 +19,8 @@
     </form>
   </div>
   <script src="script.js"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="../script.js"></script>
+
 </body>
 </html>
